--- a/src/app/modules/cards/components/repo-card/repo-card.component.html
+++ b/src/app/modules/cards/components/repo-card/repo-card.component.html
@@ -1,19 +1,37 @@
-<article>
+<article class="repo-card">
     <div class="card">
-        <div class="card-header">
-            Header
-        </div>
         <div class="card-block">
             <div class="card-title">
-                Block
+                {{data?.name}}
             </div>
             <div class="card-text">
-                ...
+                <p class="p1" *ngIf="data?.description">{{data?.description | truncate: [100]}}</p>
+                
+                <span class="label language" *ngIf="data?.language">{{data?.language}}</span>
+                <div class="status">
+                    <span *ngIf="data?.stargazers_count">
+                            <clr-icon shape="star" class="is-solid"></clr-icon>
+                            {{data?.stargazers_count}}
+                    </span>
+                    <span *ngIf="data?.forks">
+                            <clr-icon shape="share" class="fork-icon"></clr-icon>
+                            {{data?.forks}}
+                    </span>
+                    <span *ngIf="data?.watchers_count">
+                            <clr-icon shape="eye" class="is-solid"></clr-icon>
+                            {{data?.watchers_count}}
+                    </span>
+                </div>
             </div>
         </div>
         <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
+            <a [href]="data?.url" target="_blank" class="btn btn-sm btn-link">More Info <clr-icon shape="help-info"></clr-icon>
+            </a>
+            <!-- <clr-signpost>
+                <clr-signpost-content [clrPosition]="'bottom-middle'" *clrIfOpen="openState">
+                    Lorem ipsum...
+                </clr-signpost-content>
+            </clr-signpost> -->
         </div>
     </div>
 </article>
