--- a/src/app/modules/search/components/filter/filter.component.html
+++ b/src/app/modules/search/components/filter/filter.component.html
@@ -1,10 +1,74 @@
 <section class="filters">
-    <clr-checkbox-wrapper>
-        <input type="checkbox" clrCheckbox value="option1" name="options" />
-        <label>Option 1</label>
-    </clr-checkbox-wrapper>
-    <clr-checkbox-wrapper>
-        <input type="checkbox" clrCheckbox value="option2" name="options" />
-        <label>Option 2</label>
-    </clr-checkbox-wrapper>
+    <div class="filters__sort-by">
+        <h5>Sort By</h5>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="created_at" name="sort_by_options" (change)="updateSortBy('created_at', 'date')"
+                checked />
+            <label>Creation Date</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="updated_at" name="sort_by_options"
+                (change)="updateSortBy('updated_at', 'date')" />
+            <label>Update Date</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="name" name="sort_by_options" (change)="updateSortBy('name', 'string')" />
+            <label>Name</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="stargazers_count" name="sort_by_options"
+                (change)="updateSortBy('stargazers_count', 'number')" />
+            <label>Stargazers Count</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="forks" name="sort_by_options" (change)="updateSortBy('forks', 'number')" />
+            <label>Fork Count</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="watchers_count" name="sort_by_options"
+                (change)="updateSortBy('watchers_count', 'number')" />
+            <label>Watchers Count</label>
+        </clr-radio-wrapper>
+    </div>
+    <div class="separator"></div>
+    <div class="filters__sort-by">
+        <h5>Sort order</h5>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="asc" name="sort_order_options" (change)="updateSortOrder('asc')" checked />
+            <label>Ascending</label>
+        </clr-radio-wrapper>
+        <clr-radio-wrapper>
+            <input type="radio" clrRadio value="desc" name="sort_order_options" (change)="updateSortOrder('desc')" />
+            <label>Descencding</label>
+        </clr-radio-wrapper>
+    </div>
+    <!--
+    <div class="filters__sort-by">
+        <h5>Languages</h5>
+        <clr-radio-wrapper>
+                <input type="radio" clrRadio value="name" name="sort_by_options" />
+                <label>Name</label>
+            </clr-radio-wrapper>
+            <clr-radio-wrapper>
+                <input type="radio" clrRadio value="language" name="sort_by_options" />
+                <label>Language</label>
+            </clr-radio-wrapper>
+            <clr-radio-wrapper>
+                <input type="radio" clrRadio value="forks" name="sort_by_options" />
+                <label>Fork Count</label>
+            </clr-radio-wrapper>
+            <clr-radio-wrapper>
+                <input type="radio" clrRadio value="watchers_count" name="sort_by_options" />
+                <label>Watchers Count</label>
+            </clr-radio-wrapper>
+            <clr-radio-wrapper>
+                <input type="radio" clrRadio value="created_at" name="sort_by_options" />
+                <label>Creation Date</label>
+            </clr-radio-wrapper>
+            <clr-radio-wrapper>
+                <input type="radio" clrRadio value="updated_at" name="sort_by_options" />
+                <label>Update Date</label>
+            </clr-radio-wrapper>
+    </div>
+    <div class="separator"></div> -->
 </section>
