--- a/src/app/modules/search/components/filter/filter.component.scss
+++ b/src/app/modules/search/components/filter/filter.component.scss
@@ -5,5 +5,13 @@
     width: 18%;
     display: flex;
     flex-direction: column;
-    padding: 2rem 1rem 1rem 1rem;
+    padding: 1.5rem 1rem 1rem 1rem;
+
+    h5{
+        margin-bottom: 1rem;
+    }
+
+    .separator{
+        margin-bottom: 0rem;
+    }
 }
