--- a/src/app/modules/search/components/list/list.component.scss
+++ b/src/app/modules/search/components/list/list.component.scss
@@ -6,6 +6,7 @@
 }
 
 .list-container {
+    background: #fafafa;
     .list-header {
         padding: 0rem 1rem;
 
@@ -52,6 +53,7 @@
                     margin-right: 1rem;
                 }
             }
+            
         }
 
     }
