Added docs folder for deployment

--- a/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.html
+++ b/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.html
@@ -20,7 +20,7 @@
                         </div>
                 </div>
                 <div class="card-text" *ngIf="data?.description">
-                    <p class="p1">{{data?.description | truncate: [200]}}</p>
+                    <p class="p1">{{data?.description | truncate: ['200']}}</p>
                 </div>
             </div>
             <div class="card-footer">
