--- a/src/app/modules/cards/components/repo-card/repo-card.component.html
+++ b/src/app/modules/cards/components/repo-card/repo-card.component.html
@@ -2,10 +2,10 @@
     <div class="card">
         <div class="card-block">
             <div class="card-title">
-                {{data?.name | truncate: [20]}}
+                {{data?.name | truncate: ['20']}}
             </div>
             <div class="card-text">
-                <p class="p1" *ngIf="data?.description">{{data?.description | truncate: [70]}}</p>
+                <p class="p1" *ngIf="data?.description">{{data?.description | truncate: ['70']}}</p>
                 
                 <span class="label language" *ngIf="data?.language">{{data?.language}}</span>
                 <div class="status">
