--- a/src/app/modules/header/components/header-bar/header-bar.component.html
+++ b/src/app/modules/header/components/header-bar/header-bar.component.html
@@ -1,10 +1,10 @@
-<header class="header">
+<header class="header-nav" [clr-nav-level]="1">
     <div class="branding">
-        <a href="javascript:void(0)" class="title">
-            VMware Open Source Projects
+        <a href="javascript:void(0)" class="title" i18n>
+            VMware Projects
         </a>
     </div>
     <div class="header-nav">
-        <a class="active nav-link nav-text">Home</a>
+        <a class="nav-link nav-text active" i18n>Home</a>
     </div>
 </header>
