--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="disconnection-info text-center">
-    <h5 *ngIf="!isConnected" class="network-status" i18n><strong>Not Connected.</strong> Please check your network
+    <h5 *ngIf="!isConnected" i18n><strong>Not Connected.</strong> Please check your network
       connection</h5>
   </div>
   <router-outlet></router-outlet>
