--- a/src/app/modules/base/components/base/base.component.html
+++ b/src/app/modules/base/components/base/base.component.html
@@ -1,11 +1,11 @@
-<div class="main-container">
+<clr-main-container>
     <!-- <div class="alert alert-app-level">
         ...
     </div> -->
-    <header class="header header-6">
+    <clr-header class="header header-6">
         <app-header-bar></app-header-bar>
-    </header>
+    </clr-header>
     <main class="">
         <router-outlet></router-outlet>
     </main>
-</div>
+</clr-main-container>>
