--- a/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.html
+++ b/src/app/modules/cards/components/repo-landscape-card/repo-landscape-card.component.html
@@ -1,36 +1,35 @@
 <article class="repo-landscape-card">
-        <div class="card">
-            <div class="card-block">
-                <div class="card-title">
-                    {{data?.name}}
-                    <div class="status">
-                            <span class="label" *ngIf="data?.language">{{data?.language}}</span>
-                            <span *ngIf="data?.stargazers_count">
-                                    <clr-icon shape="star" class="is-solid"></clr-icon>
-                                    {{data?.stargazers_count}}
-                            </span>
-                            <span *ngIf="data?.forks">
-                                    <clr-icon shape="share" class="fork-icon"></clr-icon>
-                                    {{data?.forks}}
-                            </span>
-                            <span *ngIf="data?.watchers_count">
-                                    <clr-icon shape="eye" class="is-solid"></clr-icon>
-                                    {{data?.watchers_count}}
-                            </span>
-                        </div>
-                </div>
-                <div class="card-text" *ngIf="data?.description">
-                    <p class="p1">{{data?.description | truncate: ['200']}}</p>
+    <div class="card">
+        <div class="card-block">
+            <div class="card-title" i18n>
+                {{data?.name}}
+                <div class="status">
+                    <span class="label" *ngIf="data?.language" i18n>{{data?.language}}</span>
+                    <span *ngIf="data?.stargazers_count" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
+                        <clr-icon shape="star" class="is-solid"></clr-icon>
+                        {{data?.stargazers_count}}
+                        <span class="tooltip-content">Stargazers</span>
+                    </span>
+                    <span *ngIf="data?.forks" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
+                        <clr-icon shape="share" class="fork-icon"></clr-icon>
+                        {{data?.forks}}
+                        <span class="tooltip-content">Forks</span>
+                    </span>
+                    <span *ngIf="data?.watchers_count" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs"  i18n>
+                        <clr-icon shape="eye" class="is-solid"></clr-icon>
+                        {{data?.watchers_count}}
+                        <span class="tooltip-content">Watchers</span>
+                    </span>
                 </div>
             </div>
-            <div class="card-footer">
-                <button class="btn btn-sm btn-link">More Info <clr-icon shape="help-info"></clr-icon>
-                </button>
-                <!-- <clr-signpost>
-                    <clr-signpost-content [clrPosition]="'bottom-middle'" *clrIfOpen="openState">
-                        Lorem ipsum...
-                    </clr-signpost-content>
-                </clr-signpost> -->
+            <div class="card-text" *ngIf="data?.description" i18n>
+                <p class="p1">{{data?.description | truncate: ['200']}}</p>
             </div>
         </div>
-    </article>
+        <div class="card-footer">
+            <a [href]="data?.url" target="_blank" class="btn btn-link" i18n>KNOW MORE
+                <clr-icon shape="help-info"></clr-icon>
+            </a>
+        </div>
+    </div>
+</article>
