Network check added

--- a/src/app/modules/base/components/base/base.component.html
+++ b/src/app/modules/base/components/base/base.component.html
@@ -1,11 +1,11 @@
 <clr-main-container>
-    <!-- <div class="alert alert-app-level">
-        ...
-    </div> -->
+    <div *ngIf="!isConnected" class="alert alert-app-level alert-danger" i18n>
+            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon> Not Connected. Please check your network connection
+    </div>
     <clr-header class="header header-6">
         <app-header-bar></app-header-bar>
     </clr-header>
     <main class="">
         <router-outlet></router-outlet>
     </main>
-</clr-main-container>>
+</clr-main-container>
