--- a/src/app/modules/search/components/list/list.component.html
+++ b/src/app/modules/search/components/list/list.component.html
@@ -7,15 +7,16 @@
     </div>
     <div class="list-content">
         <aside class="list-content__filters clr-hidden-sm-down">
-            <app-filter (onSortByChange)="applySortBy($event)"></app-filter>
+            <ng-container *ngTemplateOutlet="filtersTemplate"></ng-container>
         </aside>
         <section class="list-content__results">
             <div class="list-content__results__summary">
                 <h4 i18n>Showing {{filteredRepos.length}} of {{page.total | shortNumber}} Projects</h4>
                 <app-search-bar class="list-content__results__search-bar" (onSearchChange)="handleSearch($event)">
                 </app-search-bar>
-                <button class="list-content__results__filter-button btn btn-outline clr-hidden-md-up" (click)="toggleFiltersPanel($event)">Filters<clr-icon
-                        class="filter-button__icon" [ngClass]=" showFiltersPanel ? '' : 'collapsed'" shape="angle"></clr-icon></button>
+                <button class="list-content__results__filter-button btn btn-outline clr-hidden-md-up"
+                    (click)="toggleFiltersPanel($event)">Filters<clr-icon class="filter-button__icon"
+                        [ngClass]=" showFiltersPanel ? '' : 'collapsed'" shape="angle"></clr-icon></button>
                 <div class="btn-group clr-hidden-sm-down">
                     <div class="radio btn btn-icon">
                         <input type="radio" name="btn-group-view-type" id="btn-card" value="card"
@@ -33,13 +34,14 @@
                     </div>
                 </div>
             </div>
-            <div class="list-content__results__collapsible_filters clr-hidden-md-up" [ngClass]="showFiltersPanel ? 'open' : ''">
-                <app-filter (onSortByChange)="applySortBy($event)"></app-filter>
+            <div class="list-content__results__collapsible_filters clr-hidden-md-up"
+                [ngClass]="showFiltersPanel ? 'open' : ''">
+                <ng-container *ngTemplateOutlet="filtersTemplate"></ng-container>
             </div>
             <div class="separator"></div>
             <div class="data-list">
                 <div class="clr-row data-list__loader" *ngIf="isSkeltonLoading">
-                    <div [ngClass]="defaultView == 'card' ? 'clr-col-xl-3  clr-col-lg-4 clr-col-md-6 clr-col-sm-6 clr-col-sx-12 clr-col-12' : 'clr-col-12'"
+                    <div [ngClass]="defaultView == 'card' ? 'clr-col-xl-3 clr-col-lg-4 clr-col-md-6 clr-col-sm-6 clr-col-sx-12 clr-col-12' : 'clr-col-12'"
                         *ngFor="let item of [1,2,3,4,5,6,7,8]">
                         <app-repo-card-skeleton *ngIf="defaultView == 'card'"></app-repo-card-skeleton>
                         <app-repo-landscape-card-skeleton *ngIf="defaultView == 'list'">
@@ -47,7 +49,7 @@
                     </div>
                 </div>
                 <div class="clr-row data-list__items">
-                    <div [ngClass]="defaultView == 'card' ? 'clr-col-xl-3  clr-col-lg-4 clr-col-md-6 clr-col-sm-6 clr-col-sx-12 clr-col-12' : 'clr-col-12'"
+                    <div [ngClass]="defaultView == 'card' ? 'clr-col-xl-3 clr-col-lg-4 clr-col-md-6 clr-col-sm-6 clr-col-sx-12 clr-col-12' : 'clr-col-12'"
                         *ngFor="let repo of filteredRepos">
                         <app-repo-card *ngIf="defaultView == 'card'" [data]="repo"></app-repo-card>
                         <app-repo-landscape-card *ngIf="defaultView == 'list'" [data]="repo">
@@ -58,3 +60,7 @@
         </section>
     </div>
 </main>
+
+<ng-template #filtersTemplate>
+    <app-filter (onSortByChange)="applySortBy($event)"></app-filter>
+</ng-template>
