--- a/src/app/modules/search/components/filter/filter.component.html
+++ b/src/app/modules/search/components/filter/filter.component.html
@@ -32,14 +32,14 @@
     </div>
     <div class="separator"></div>
     <div class="filters__sort-order">
-        <h5 i18n>Sort order</h5>
+        <h5 i18n>Sort Order</h5>
         <clr-radio-wrapper>
             <input type="radio" clrRadio value="asc" name="sort_order_options" (change)="updateSortOrder('asc')" checked />
             <label i18n>Ascending</label>
         </clr-radio-wrapper>
         <clr-radio-wrapper>
             <input type="radio" clrRadio value="desc" name="sort_order_options" (change)="updateSortOrder('desc')" />
-            <label i18n>Descencding</label>
+            <label i18n>Descending</label>
         </clr-radio-wrapper>
     </div>    
 </section>
